--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,16 +5,16 @@
   <span class="spacer"></span>
   <ul>
     <li *ngIf="userIsAuthenticated">
-      <a mat-button routerLink="/create" routerLinkActive="mat-accent">New Post</a>
+      <a mat-button routerLink="/create" routerLinkActive="mat-accent" data-test="new-post-btn">New Post</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="auth/login" routerLinkActive="mat-accent">Login</a>
+      <a mat-button routerLink="auth/login" routerLinkActive="mat-accent" data-test="login-btn">Login</a>
     </li>
     <li *ngIf="!userIsAuthenticated">
-      <a mat-button routerLink="auth/signup" routerLinkActive="mat-accent">Signup</a>
+      <a mat-button routerLink="auth/signup" routerLinkActive="mat-accent" data-test="signup-btn">Signup</a>
     </li>
     <li *ngIf="userIsAuthenticated">
-      <button mat-button (click)="onLogout()">Logout</button>
+      <button mat-button (click)="onLogout()" data-test="logout-btn">Logout</button>
     </li>
   </ul>
 </mat-toolbar>
